# loop-bench

./: .gitignore  Makefile  PLAN.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
adapters/minimal/: adapter.ts
adapters/plan-first/: adapter.ts
adapters/reflexion/: adapter.ts
adapters/shared/: llm-client.ts  ltf-writer.ts  workspace.ts
analysis/: compare.py  leaderboard.py  statistics.py  test_analysis.py  visualize.py
context/: CONTEXT.md
docker/: build.sh
docker/base/: Dockerfile.go  Dockerfile.node  Dockerfile.python
docs/: index.html
docs/data/: leaderboard.json
harness/src/: adapter.ts  adapters.test.ts  cli.ts  cost-tracker.test.ts  cost-tracker.ts  docker.test.ts  docker.ts  evaluator.ts  index.ts  loader.test.ts  loader.ts  ltf-collector.test.ts  ltf-collector.ts  metrics-engine.test.ts  metrics-engine.ts  metrics.test.ts  metrics.ts  report.test.ts  report.ts  runner.ts  types.ts  validate.test.ts  validate.ts
leaderboard/assets/: app.js  style.css
scripts/: validate-all-tasks.mjs
spec/: BENCHMARK.md  metrics.md  result-schema.json  task-schema.json
tasks/bug-fix/deadlock-worker/: task.yaml
tasks/bug-fix/import-cycle/: task.yaml
tasks/bug-fix/memory-leak/: task.yaml
tasks/bug-fix/missing-null-check/: task.yaml
tasks/bug-fix/off-by-one/: task.yaml
tasks/bug-fix/race-condition/: task.yaml
tasks/bug-fix/silent-corruption/: task.yaml
tasks/bug-fix/silent-corruption/repo/: pyproject.toml
tasks/bug-fix/silent-corruption/repo/src/: __init__.py  serializer.py  serializer_fixed.py  test_serializer.py
tasks/bug-fix/sql-injection/: task.yaml
tasks/bug-fix/sql-injection/repo/: pyproject.toml
tasks/bug-fix/sql-injection/repo/src/: db.py  test_db.py
tasks/bug-fix/timezone-parse/: task.yaml
tasks/bug-fix/wrong-return-type/: task.yaml
tasks/feature/cache-ttl/: task.yaml
tasks/feature/cli-argparse/: task.yaml
tasks/feature/cursor-pagination/: task.yaml
tasks/feature/file-upload/: task.yaml
tasks/feature/health-check/: task.yaml
tasks/feature/rate-limiting/: task.yaml
tasks/feature/request-validation/: task.yaml
tasks/feature/retry-backoff/: task.yaml
tasks/feature/structured-logging/: task.yaml
tasks/feature/webhook-verify/: task.yaml
tasks/multi-step/add-auth/: task.yaml
tasks/multi-step/add-tests/: task.yaml
tasks/multi-step/build-cli/: task.yaml
tasks/multi-step/build-cli/repo/: pyproject.toml
tasks/multi-step/build-cli/repo/src/: __init__.py  processor.py  test_processor.py
(+185 files in other folders)
