[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "loopeng-bench"
version = "0.1.0"
description = "Analysis and visualization tools for loop-bench benchmark results"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Raj Firke", email = "rajfirke23@gmail.com" },
]
keywords = [
    "loop-engineering",
    "benchmark",
    "agent",
    "evaluation",
    "ltf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/loop-eng/loop-bench"
Repository = "https://github.com/loop-eng/loop-bench"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["analysis"]
python_files = ["test_*.py"]
