[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "textproc"
version = "1.0.0"
description = "Text processing library and CLI"
requires-python = ">=3.10"

[project.scripts]
textproc = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["src"]
